# ai-career-assistant-chatbot

./: .env.example  .gitattributes  .gitignore  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  PAGINATION_UPDATE.md  QUICKSTART_BLOG_CACHE.md  README.md  TESTING_GUIDE.md  app.py  career-assistant-blog.md  career_chatbot.py  demo_blog_cache.py  pyproject.toml  quick_test.py  requirements.txt  test_blog_cache.py
.github/workflows/: keep-space-awake.yml
data/: README.md  blog_articles.json  semantic_cache.db  test_semantic_cache.db
docs/: blog-and-cache-system.md
me/: career_qa.txt  summary.txt
models/: blog_manager.py  blog_scraper.py  config.py  scheduler.py  semantic_cache.py
prompts/: chat_init.md  evaluator.md
